--- a/Views/client/share/script.cshtml
+++ b/Views/client/share/script.cshtml
@@ -12,6 +12,7 @@
 <script src="assets/js/jquery.nice-select.min.js"></script>
 <!-- Image Loader -->
 <script src="assets/js/imagesloaded.pkgd.min.js"></script>
+
 <!-- Skillbar -->
 <script src="assets/js/skill.bars.jquery.min.js"></script>
 <!-- Isotope -->
@@ -20,3 +21,7 @@
 <script src="assets/js/aos.js"></script>
 <!-- Custom script -->
 <script src="assets/js/script.js"></script>
+
+
+<!-- Jquery UI -->
+<script src="assets/js/jquery-ui.min.js"></script>
