Update logic and schema for Database branch

--- a/Views/admin/share/menu.cshtml
+++ b/Views/admin/share/menu.cshtml
@@ -1,4 +1,4 @@
-﻿<aside class="sidebar" id="sidebar">
+﻿<aside class="sidebar expanded" id="sidebar">
     <button class="sidebar-toggle" onclick="toggleSidebarExpand()">
         <i class="fa-light fa-gear-complex" id="toggleIcon"></i>
     </button>
@@ -34,7 +34,7 @@
             <div class="tooltip">Role</div>
         </a>
 
-        <a href="#" class="menu-item">
+        <a href="/admin/user-manager" class="menu-item">
             <i class="fa-light fa-user"></i>
             <span class="menu-text">User</span>
             <div class="tooltip">User</div>
