--- a/Views/admin/share/menu.cshtml
+++ b/Views/admin/share/menu.cshtml
@@ -1,4 +1,4 @@
-﻿<aside class="sidebar expanded" id="sidebar">
+﻿<aside class="sidebar" id="sidebar">
     <button class="sidebar-toggle" onclick="toggleSidebarExpand()">
         <i class="fa-light fa-gear-complex" id="toggleIcon"></i>
     </button>
