--- a/Views/client/Home.cshtml
+++ b/Views/client/Home.cshtml
@@ -10,7 +10,11 @@
         <div class="preloader"><div class="custom-loader"></div></div>
 
         <!-- main header -->
-        @Html.Partial("~/Views/client/share/header.cshtml")
+        <header class="main-header header-one white-menu menu-absolute">
+            @Html.Partial("~/Views/client/share/header.cshtml")
+
+        </header>
+
 
         <!--Form Back Drop-->
         <div class="form-back-drop"></div>
