Update Tour list and Tour manage features

--- a/Views/admin/share/menu.cshtml
+++ b/Views/admin/share/menu.cshtml
@@ -46,7 +46,7 @@
             <div class="tooltip">Category</div>
         </a>
 
-        <a href="#" class="menu-item">
+        <a href="/admin/tour-admin" class="menu-item">
             <i class="fa-light fa-plane-departure"></i>
             <span class="menu-text">Tour</span>
             <div class="tooltip">Tour</div>
