Sua phan destination

--- a/Views/client/Home.cshtml
+++ b/Views/client/Home.cshtml
@@ -281,7 +281,7 @@
                                             <div class="destination-item style-two" data-aos="flip-up" data-aos-duration="1500" data-aos-offset="50">
                                                 <div class="image">
                                                     <a href="#" class="heart"><i class="fas fa-heart"></i></a>
-                                                    <img src="@imageUrl" alt="@dest.DestinationName" style="height: 220px; width: 100%; object-fit: cover;">
+                                                    <img src="@imageUrl" alt="@dest.DestinationName">
                                                 </div>
                                                 <div class="content">
                                                     <h6><a href="/destination/details/@dest.DestinationId">@dest.DestinationName</a></h6>
@@ -745,23 +745,6 @@
             }
         });
     </script>
-    <style>
-    .destination-item .image img {
-      height: 220px;
-      width: 100%;
-      object-fit: cover;
-      display: block;
-    }
-    /* Swiper controls custom style */
-    .swiper-controls-wrapper {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 30px;
-      margin-top: 20px;
-      position: relative;
-    }
-    </style>
 
 </body>
 
