--- a/Views/client/share/footer-area.cshtml
+++ b/Views/client/share/footer-area.cshtml
@@ -7,7 +7,7 @@
                 <div class="col col-small" data-aos="fade-up" data-aos-duration="1500" data-aos-offset="50">
                     <div class="footer-widget footer-text">
                         <div class="footer-logo mb-40">
-                            <a href="index.html"><img src="assets/images/logos/logo.png" alt="Logo"></a>
+                            <a href="index.html"><img src="@Url.Content("~/assets/images/logos/logo.png")" asp-append-version="true" alt="Logo"></a>
                         </div>
                         <div class="footer-map">
                             <iframe
