--- a/Views/client/share/header2.cshtml
+++ b/Views/client/share/header2.cshtml
@@ -6,7 +6,9 @@
 
             <div class="header-inner rel d-flex align-items-center">
                 <div class="logo-outer">
-                    <div class="logo"><a href="index.html"><img src="assets/images/logos/logo-two.png" alt="Logo"
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="@Url.Content("~/assets/images/logos/logo-two.png")" alt="Logo"
                                 title="Logo"></a></div>
                 </div>
 
@@ -16,7 +18,7 @@
                         <div class="navbar-header">
                             <div class="mobile-logo">
                                 <a href="index.html">
-                                    <img src="assets/images/logos/logo-two.png" alt="Logo" title="Logo">
+                                    <img src="@Url.Content("~/assets/images/logos/logo-two.png")" alt="Logo" title="Logo">
                                 </a>
                             </div>
 
