--- a/Views/client/share/script.cshtml
+++ b/Views/client/share/script.cshtml
@@ -1,27 +1,24 @@
 ﻿<!-- Jquery -->
-<script src="assets/js/jquery-3.6.0.min.js"></script>
+<script src="@Url.Content("~/assets/js/jquery-3.6.0.min.js")" asp-append-version="true"></script>
 <!-- Bootstrap -->
-<script src="assets/js/bootstrap.min.js"></script>
+<script src="@Url.Content("~/assets/js/bootstrap.min.js")" asp-append-version="true"></script>
 <!-- Appear Js -->
-<script src="assets/js/appear.min.js"></script>
+<script src="@Url.Content("~/assets/js/appear.min.js")" asp-append-version="true"></script>
 <!-- Slick -->
-<script src="assets/js/slick.min.js"></script>
+<script src="@Url.Content("~/assets/js/slick.min.js")" asp-append-version="true"></script>
 <!-- Magnific Popup -->
-<script src="assets/js/jquery.magnific-popup.min.js"></script>
+<script src="@Url.Content("~/assets/js/jquery.magnific-popup.min.js")" asp-append-version="true"></script>
 <!-- Nice Select -->
-<script src="assets/js/jquery.nice-select.min.js"></script>
+<script src="@Url.Content("~/assets/js/jquery.nice-select.min.js")" asp-append-version="true"></script>
 <!-- Image Loader -->
-<script src="assets/js/imagesloaded.pkgd.min.js"></script>
-
+<script src="@Url.Content("~/assets/js/imagesloaded.pkgd.min.js")" asp-append-version="true"></script>
 <!-- Skillbar -->
-<script src="assets/js/skill.bars.jquery.min.js"></script>
+<script src="@Url.Content("~/assets/js/skill.bars.jquery.min.js")" asp-append-version="true"></script>
 <!-- Isotope -->
-<script src="assets/js/isotope.pkgd.min.js"></script>
-<!--  AOS Animation -->
-<script src="assets/js/aos.js"></script>
-<!-- Custom script -->
-
-<script src="assets/js/script.js"></script>
-
-<!-- Jquery UI -->
-<script src="assets/js/jquery-ui.min.js"></script>
+<script src="@Url.Content("~/assets/js/isotope.pkgd.min.js")" asp-append-version="true"></script>
+<!-- AOS Animation -->
+<script src="@Url.Content("~/assets/js/aos.js")" asp-append-version="true"></script>
+<!-- Custom Script -->
+<script src="@Url.Content("~/assets/js/script.js")" asp-append-version="true"></script>
+<!-- jQuery UI -->
+<script src="@Url.Content("~/assets/js/jquery-ui.min.js")" asp-append-version="true"></script>
