--- a/Views/client/share/header2.cshtml
+++ b/Views/client/share/header2.cshtml
@@ -6,8 +6,12 @@
 
             <div class="header-inner rel d-flex align-items-center">
                 <div class="logo-outer">
-                    <div class="logo"><a href="index.html"><img src="assets/images/logos/logo-two.png" alt="Logo"
-                                title="Logo"></a></div>
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="@Url.Content("~/assets/images/logos/logo-two.png")" alt="Logo"
+                                 title="Logo">
+                        </a>
+                    </div>
                 </div>
 
                 <div class="nav-outer mx-lg-auto ps-xxl-5 clearfix">
@@ -16,13 +20,13 @@
                         <div class="navbar-header">
                             <div class="mobile-logo">
                                 <a href="index.html">
-                                    <img src="assets/images/logos/logo-two.spng" alt="Logo" title="Logo">
+                                    <img src="@Url.Content("~/assets/images/logos/logo-two.png")" alt="Logo" title="Logo">
                                 </a>
                             </div>
 
                             <!-- Toggle Button -->
                             <button type="button" class="navbar-toggle" data-bs-toggle="collapse"
-                                data-bs-target=".navbar-collapse">
+                                    data-bs-target=".navbar-collapse">
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
@@ -31,7 +35,8 @@
 
                         <div class="navbar-collapse collapse clearfix">
                             <ul class="navigation clearfix">
-                                <li class="dropdown current"><a href="#">Home</a>
+                                <li class="dropdown current">
+                                    <a href="#">Home</a>
                                     <ul>
                                         <li><a href="index.html">Travel Agency</a></li>
                                         <li><a href="index2.html">City Tou</a></li>
@@ -39,7 +44,8 @@
                                     </ul>
                                 </li>
                                 <li><a href="about.html">About</a></li>
-                                <li class="dropdown"><a href="#">Tours</a>
+                                <li class="dropdown">
+                                    <a href="#">Tours</a>
                                     <ul>
                                         <li><a href="tour-list.html">Tour List</a></li>
                                         <li><a href="tour-grid.html">Tour Grid</a></li>
@@ -48,24 +54,28 @@
                                         <li><a href="tour-guide.html">Tour Guide</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="#">Destinations</a>
+                                <li class="dropdown">
+                                    <a href="#">Destinations</a>
                                     <ul>
                                         <li><a href="destination1.html">Destination 01</a></li>
                                         <li><a href="destination2.html">Destination 01</a></li>
                                         <li><a href="destination-details.html">Destination Details</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="#">Pages</a>
+                                <li class="dropdown">
+                                    <a href="#">Pages</a>
                                     <ul>
                                         <li><a href="pricing.html">Pricing</a></li>
                                         <li><a href="faqs.html">faqs</a></li>
-                                        <li class="dropdown"><a href="#">Gallery</a>
+                                        <li class="dropdown">
+                                            <a href="#">Gallery</a>
                                             <ul>
                                                 <li><a href="gellery-grid.html">Gallery Grid</a></li>
                                                 <li><a href="gellery-slider.html">Gallery Slider</a></li>
                                             </ul>
                                         </li>
-                                        <li class="dropdown"><a href="#">products</a>
+                                        <li class="dropdown">
+                                            <a href="#">products</a>
                                             <ul>
                                                 <li><a href="shop.html">Our Products</a></li>
                                                 <li><a href="product-details.html">Product Details</a></li>
@@ -75,7 +85,8 @@
                                         <li><a href="404.html">404 Error</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="#">blog</a>
+                                <li class="dropdown">
+                                    <a href="#">blog</a>
                                     <ul>
                                         <li><a href="blog.html">blog List</a></li>
                                         <li><a href="blog-details.html">blog details</a></li>
