--- a/Views/client/blog/ListBlog.cshtml
+++ b/Views/client/blog/ListBlog.cshtml
@@ -88,7 +88,7 @@
 
                         @foreach (var blog in Model)
                         {
-                            var mainImage = blog.BlogImages?.FirstOrDefault(img => img.IsMain == true)?.ImageUrl ?? "/assets/images/blog/default.jpg";
+                            var mainImage = blog.BlogImages?.FirstOrDefault(img => img.IsMain == true)?.ImageUrl ?? "/image/default.jpg";
                             var authorName = blog.AuthorAdmin?.FullName ?? blog.AuthorUser?.FullName ?? "Unknown";
                             var blogDate = blog.CreatedAt?.ToString("dd MMMM yyyy") ?? "N/A";
 
@@ -99,7 +99,7 @@
                                 <div class="content">
                                     <a href="#" class="category">@blog.Category?.CategoryName</a>
                                     <h5>
-                                        <a href="/blog/detail/@blog.BlogId">@blog.Title</a>
+                                        <a href="/blog-detail/@blog.BlogId">@blog.Title</a>
                                     </h5>
                                     <ul class="blog-meta">
                                         <li><i class="far fa-calendar-alt"></i> <a href="#">@blogDate</a></li>
