--- a/Views/client/share/header.cshtml
+++ b/Views/client/share/header.cshtml
@@ -3,7 +3,7 @@
 
         <div class="header-inner rel d-flex align-items-center">
             <div class="logo-outer">
-                <div class="logo"><a href="index.html"><img src="@Url.Content("assets/images/logos/logo.png")" alt="Logo" title="Logo"></a></div>
+                <div class="logo"><a href="index.html"><img src="@Url.Content("~/assets/images/logos/logo.png")" alt="Logo" title="Logo"></a></div>
             </div>
 
             <div class="nav-outer mx-lg-auto ps-xxl-5 clearfix">
@@ -12,7 +12,7 @@
                     <div class="navbar-header">
                         <div class="mobile-logo">
                             <a href="index.html">
-                                <img src="@Url.Content("assets/images/logos/logo.png")" alt="Logo" title="Logo">
+                                <img src="@Url.Content("~/assets/images/logos/logo.png")" alt="Logo" title="Logo">
                             </a>
                         </div>
 
