--- a/Views/admin/share/menu.cshtml
+++ b/Views/admin/share/menu.cshtml
@@ -34,7 +34,7 @@
             <div class="tooltip">Role</div>
         </a>
 
-        <a href="/admin/user-manager" class="menu-item">
+        <a href="/admin/account-admin" class="menu-item">
             <i class="fa-light fa-user"></i>
             <span class="menu-text">User</span>
             <div class="tooltip">User</div>
@@ -64,7 +64,7 @@
             <div class="tooltip">Booking</div>
         </a>
 
-        <a href="#" class="menu-item">
+        <a href="/admin/blog" class="menu-item">
             <i class="fa-light fa-blog"></i>
             <span class="menu-text">Blog</span>
             <div class="tooltip">Blog</div>
